// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib graphql getFields() returns list of type fields 1`] = `
"[
  {
    "name": "createTweet",
    "type": "Tweet",
    "args": [
      {
        "name": "input",
        "type": "TweetContent",
        "deprecationReason": "Use \`content\`.",
        "extensions": {},
        "astNode": {
          "kind": "InputValueDefinition",
          "name": {
            "kind": "Name",
            "value": "input",
            "loc": {
              "start": 1341,
              "end": 1346
            }
          },
          "type": {
            "kind": "NamedType",
            "name": {
              "kind": "Name",
              "value": "TweetContent",
              "loc": {
                "start": 1348,
                "end": 1360
              }
            },
            "loc": {
              "start": 1348,
              "end": 1360
            }
          },
          "directives": [
            {
              "kind": "Directive",
              "name": {
                "kind": "Name",
                "value": "deprecated",
                "loc": {
                  "start": 1362,
                  "end": 1372
                }
              },
              "arguments": [
                {
                  "kind": "Argument",
                  "name": {
                    "kind": "Name",
                    "value": "reason",
                    "loc": {
                      "start": 1373,
                      "end": 1379
                    }
                  },
                  "value": {
                    "kind": "StringValue",
                    "value": "Use \`content\`.",
                    "block": false,
                    "loc": {
                      "start": 1381,
                      "end": 1397
                    }
                  },
                  "loc": {
                    "start": 1373,
                    "end": 1397
                  }
                }
              ],
              "loc": {
                "start": 1361,
                "end": 1398
              }
            }
          ],
          "loc": {
            "start": 1341,
            "end": 1398
          }
        }
      },
      {
        "name": "content",
        "type": "TweetContent",
        "extensions": {},
        "astNode": {
          "kind": "InputValueDefinition",
          "name": {
            "kind": "Name",
            "value": "content",
            "loc": {
              "start": 1407,
              "end": 1414
            }
          },
          "type": {
            "kind": "NamedType",
            "name": {
              "kind": "Name",
              "value": "TweetContent",
              "loc": {
                "start": 1416,
                "end": 1428
              }
            },
            "loc": {
              "start": 1416,
              "end": 1428
            }
          },
          "directives": [],
          "loc": {
            "start": 1407,
            "end": 1428
          }
        }
      }
    ],
    "extensions": {},
    "astNode": {
      "kind": "FieldDefinition",
      "name": {
        "kind": "Name",
        "value": "createTweet",
        "loc": {
          "start": 1319,
          "end": 1330
        }
      },
      "arguments": [
        {
          "kind": "InputValueDefinition",
          "name": {
            "kind": "Name",
            "value": "input",
            "loc": {
              "start": 1341,
              "end": 1346
            }
          },
          "type": {
            "kind": "NamedType",
            "name": {
              "kind": "Name",
              "value": "TweetContent",
              "loc": {
                "start": 1348,
                "end": 1360
              }
            },
            "loc": {
              "start": 1348,
              "end": 1360
            }
          },
          "directives": [
            {
              "kind": "Directive",
              "name": {
                "kind": "Name",
                "value": "deprecated",
                "loc": {
                  "start": 1362,
                  "end": 1372
                }
              },
              "arguments": [
                {
                  "kind": "Argument",
                  "name": {
                    "kind": "Name",
                    "value": "reason",
                    "loc": {
                      "start": 1373,
                      "end": 1379
                    }
                  },
                  "value": {
                    "kind": "StringValue",
                    "value": "Use \`content\`.",
                    "block": false,
                    "loc": {
                      "start": 1381,
                      "end": 1397
                    }
                  },
                  "loc": {
                    "start": 1373,
                    "end": 1397
                  }
                }
              ],
              "loc": {
                "start": 1361,
                "end": 1398
              }
            }
          ],
          "loc": {
            "start": 1341,
            "end": 1398
          }
        },
        {
          "kind": "InputValueDefinition",
          "name": {
            "kind": "Name",
            "value": "content",
            "loc": {
              "start": 1407,
              "end": 1414
            }
          },
          "type": {
            "kind": "NamedType",
            "name": {
              "kind": "Name",
              "value": "TweetContent",
              "loc": {
                "start": 1416,
                "end": 1428
              }
            },
            "loc": {
              "start": 1416,
              "end": 1428
            }
          },
          "directives": [],
          "loc": {
            "start": 1407,
            "end": 1428
          }
        }
      ],
      "type": {
        "kind": "NamedType",
        "name": {
          "kind": "Name",
          "value": "Tweet",
          "loc": {
            "start": 1436,
            "end": 1441
          }
        },
        "loc": {
          "start": 1436,
          "end": 1441
        }
      },
      "directives": [],
      "loc": {
        "start": 1319,
        "end": 1441
      }
    }
  },
  {
    "name": "deleteTweet",
    "type": "Tweet",
    "args": [
      {
        "name": "id",
        "type": "ID!",
        "extensions": {},
        "astNode": {
          "kind": "InputValueDefinition",
          "name": {
            "kind": "Name",
            "value": "id",
            "loc": {
              "start": 1458,
              "end": 1460
            }
          },
          "type": {
            "kind": "NonNullType",
            "type": {
              "kind": "NamedType",
              "name": {
                "kind": "Name",
                "value": "ID",
                "loc": {
                  "start": 1462,
                  "end": 1464
                }
              },
              "loc": {
                "start": 1462,
                "end": 1464
              }
            },
            "loc": {
              "start": 1462,
              "end": 1465
            }
          },
          "directives": [],
          "loc": {
            "start": 1458,
            "end": 1465
          }
        }
      }
    ],
    "extensions": {},
    "astNode": {
      "kind": "FieldDefinition",
      "name": {
        "kind": "Name",
        "value": "deleteTweet",
        "loc": {
          "start": 1446,
          "end": 1457
        }
      },
      "arguments": [
        {
          "kind": "InputValueDefinition",
          "name": {
            "kind": "Name",
            "value": "id",
            "loc": {
              "start": 1458,
              "end": 1460
            }
          },
          "type": {
            "kind": "NonNullType",
            "type": {
              "kind": "NamedType",
              "name": {
                "kind": "Name",
                "value": "ID",
                "loc": {
                  "start": 1462,
                  "end": 1464
                }
              },
              "loc": {
                "start": 1462,
                "end": 1464
              }
            },
            "loc": {
              "start": 1462,
              "end": 1465
            }
          },
          "directives": [],
          "loc": {
            "start": 1458,
            "end": 1465
          }
        }
      ],
      "type": {
        "kind": "NamedType",
        "name": {
          "kind": "Name",
          "value": "Tweet",
          "loc": {
            "start": 1468,
            "end": 1473
          }
        },
        "loc": {
          "start": 1468,
          "end": 1473
        }
      },
      "directives": [],
      "loc": {
        "start": 1446,
        "end": 1473
      }
    }
  },
  {
    "name": "markTweetRead",
    "type": "Boolean",
    "args": [
      {
        "name": "id",
        "type": "ID!",
        "extensions": {},
        "astNode": {
          "kind": "InputValueDefinition",
          "name": {
            "kind": "Name",
            "value": "id",
            "loc": {
              "start": 1492,
              "end": 1494
            }
          },
          "type": {
            "kind": "NonNullType",
            "type": {
              "kind": "NamedType",
              "name": {
                "kind": "Name",
                "value": "ID",
                "loc": {
                  "start": 1496,
                  "end": 1498
                }
              },
              "loc": {
                "start": 1496,
                "end": 1498
              }
            },
            "loc": {
              "start": 1496,
              "end": 1499
            }
          },
          "directives": [],
          "loc": {
            "start": 1492,
            "end": 1499
          }
        }
      }
    ],
    "extensions": {},
    "astNode": {
      "kind": "FieldDefinition",
      "name": {
        "kind": "Name",
        "value": "markTweetRead",
        "loc": {
          "start": 1478,
          "end": 1491
        }
      },
      "arguments": [
        {
          "kind": "InputValueDefinition",
          "name": {
            "kind": "Name",
            "value": "id",
            "loc": {
              "start": 1492,
              "end": 1494
            }
          },
          "type": {
            "kind": "NonNullType",
            "type": {
              "kind": "NamedType",
              "name": {
                "kind": "Name",
                "value": "ID",
                "loc": {
                  "start": 1496,
                  "end": 1498
                }
              },
              "loc": {
                "start": 1496,
                "end": 1498
              }
            },
            "loc": {
              "start": 1496,
              "end": 1499
            }
          },
          "directives": [],
          "loc": {
            "start": 1492,
            "end": 1499
          }
        }
      ],
      "type": {
        "kind": "NamedType",
        "name": {
          "kind": "Name",
          "value": "Boolean",
          "loc": {
            "start": 1502,
            "end": 1509
          }
        },
        "loc": {
          "start": 1502,
          "end": 1509
        }
      },
      "directives": [],
      "loc": {
        "start": 1478,
        "end": 1509
      }
    }
  }
]"
`;

exports[`lib graphql getIntrospectionFieldsList() returns list of mutations 1`] = `
"{
  "createTweet": {
    "name": "createTweet",
    "type": "Tweet",
    "args": [
      {
        "name": "input",
        "type": "TweetContent",
        "deprecationReason": "Use \`content\`.",
        "extensions": {},
        "astNode": {
          "kind": "InputValueDefinition",
          "name": {
            "kind": "Name",
            "value": "input",
            "loc": {
              "start": 1341,
              "end": 1346
            }
          },
          "type": {
            "kind": "NamedType",
            "name": {
              "kind": "Name",
              "value": "TweetContent",
              "loc": {
                "start": 1348,
                "end": 1360
              }
            },
            "loc": {
              "start": 1348,
              "end": 1360
            }
          },
          "directives": [
            {
              "kind": "Directive",
              "name": {
                "kind": "Name",
                "value": "deprecated",
                "loc": {
                  "start": 1362,
                  "end": 1372
                }
              },
              "arguments": [
                {
                  "kind": "Argument",
                  "name": {
                    "kind": "Name",
                    "value": "reason",
                    "loc": {
                      "start": 1373,
                      "end": 1379
                    }
                  },
                  "value": {
                    "kind": "StringValue",
                    "value": "Use \`content\`.",
                    "block": false,
                    "loc": {
                      "start": 1381,
                      "end": 1397
                    }
                  },
                  "loc": {
                    "start": 1373,
                    "end": 1397
                  }
                }
              ],
              "loc": {
                "start": 1361,
                "end": 1398
              }
            }
          ],
          "loc": {
            "start": 1341,
            "end": 1398
          }
        }
      },
      {
        "name": "content",
        "type": "TweetContent",
        "extensions": {},
        "astNode": {
          "kind": "InputValueDefinition",
          "name": {
            "kind": "Name",
            "value": "content",
            "loc": {
              "start": 1407,
              "end": 1414
            }
          },
          "type": {
            "kind": "NamedType",
            "name": {
              "kind": "Name",
              "value": "TweetContent",
              "loc": {
                "start": 1416,
                "end": 1428
              }
            },
            "loc": {
              "start": 1416,
              "end": 1428
            }
          },
          "directives": [],
          "loc": {
            "start": 1407,
            "end": 1428
          }
        }
      }
    ],
    "extensions": {},
    "astNode": {
      "kind": "FieldDefinition",
      "name": {
        "kind": "Name",
        "value": "createTweet",
        "loc": {
          "start": 1319,
          "end": 1330
        }
      },
      "arguments": [
        {
          "kind": "InputValueDefinition",
          "name": {
            "kind": "Name",
            "value": "input",
            "loc": {
              "start": 1341,
              "end": 1346
            }
          },
          "type": {
            "kind": "NamedType",
            "name": {
              "kind": "Name",
              "value": "TweetContent",
              "loc": {
                "start": 1348,
                "end": 1360
              }
            },
            "loc": {
              "start": 1348,
              "end": 1360
            }
          },
          "directives": [
            {
              "kind": "Directive",
              "name": {
                "kind": "Name",
                "value": "deprecated",
                "loc": {
                  "start": 1362,
                  "end": 1372
                }
              },
              "arguments": [
                {
                  "kind": "Argument",
                  "name": {
                    "kind": "Name",
                    "value": "reason",
                    "loc": {
                      "start": 1373,
                      "end": 1379
                    }
                  },
                  "value": {
                    "kind": "StringValue",
                    "value": "Use \`content\`.",
                    "block": false,
                    "loc": {
                      "start": 1381,
                      "end": 1397
                    }
                  },
                  "loc": {
                    "start": 1373,
                    "end": 1397
                  }
                }
              ],
              "loc": {
                "start": 1361,
                "end": 1398
              }
            }
          ],
          "loc": {
            "start": 1341,
            "end": 1398
          }
        },
        {
          "kind": "InputValueDefinition",
          "name": {
            "kind": "Name",
            "value": "content",
            "loc": {
              "start": 1407,
              "end": 1414
            }
          },
          "type": {
            "kind": "NamedType",
            "name": {
              "kind": "Name",
              "value": "TweetContent",
              "loc": {
                "start": 1416,
                "end": 1428
              }
            },
            "loc": {
              "start": 1416,
              "end": 1428
            }
          },
          "directives": [],
          "loc": {
            "start": 1407,
            "end": 1428
          }
        }
      ],
      "type": {
        "kind": "NamedType",
        "name": {
          "kind": "Name",
          "value": "Tweet",
          "loc": {
            "start": 1436,
            "end": 1441
          }
        },
        "loc": {
          "start": 1436,
          "end": 1441
        }
      },
      "directives": [],
      "loc": {
        "start": 1319,
        "end": 1441
      }
    }
  },
  "deleteTweet": {
    "name": "deleteTweet",
    "type": "Tweet",
    "args": [
      {
        "name": "id",
        "type": "ID!",
        "extensions": {},
        "astNode": {
          "kind": "InputValueDefinition",
          "name": {
            "kind": "Name",
            "value": "id",
            "loc": {
              "start": 1458,
              "end": 1460
            }
          },
          "type": {
            "kind": "NonNullType",
            "type": {
              "kind": "NamedType",
              "name": {
                "kind": "Name",
                "value": "ID",
                "loc": {
                  "start": 1462,
                  "end": 1464
                }
              },
              "loc": {
                "start": 1462,
                "end": 1464
              }
            },
            "loc": {
              "start": 1462,
              "end": 1465
            }
          },
          "directives": [],
          "loc": {
            "start": 1458,
            "end": 1465
          }
        }
      }
    ],
    "extensions": {},
    "astNode": {
      "kind": "FieldDefinition",
      "name": {
        "kind": "Name",
        "value": "deleteTweet",
        "loc": {
          "start": 1446,
          "end": 1457
        }
      },
      "arguments": [
        {
          "kind": "InputValueDefinition",
          "name": {
            "kind": "Name",
            "value": "id",
            "loc": {
              "start": 1458,
              "end": 1460
            }
          },
          "type": {
            "kind": "NonNullType",
            "type": {
              "kind": "NamedType",
              "name": {
                "kind": "Name",
                "value": "ID",
                "loc": {
                  "start": 1462,
                  "end": 1464
                }
              },
              "loc": {
                "start": 1462,
                "end": 1464
              }
            },
            "loc": {
              "start": 1462,
              "end": 1465
            }
          },
          "directives": [],
          "loc": {
            "start": 1458,
            "end": 1465
          }
        }
      ],
      "type": {
        "kind": "NamedType",
        "name": {
          "kind": "Name",
          "value": "Tweet",
          "loc": {
            "start": 1468,
            "end": 1473
          }
        },
        "loc": {
          "start": 1468,
          "end": 1473
        }
      },
      "directives": [],
      "loc": {
        "start": 1446,
        "end": 1473
      }
    }
  },
  "markTweetRead": {
    "name": "markTweetRead",
    "type": "Boolean",
    "args": [
      {
        "name": "id",
        "type": "ID!",
        "extensions": {},
        "astNode": {
          "kind": "InputValueDefinition",
          "name": {
            "kind": "Name",
            "value": "id",
            "loc": {
              "start": 1492,
              "end": 1494
            }
          },
          "type": {
            "kind": "NonNullType",
            "type": {
              "kind": "NamedType",
              "name": {
                "kind": "Name",
                "value": "ID",
                "loc": {
                  "start": 1496,
                  "end": 1498
                }
              },
              "loc": {
                "start": 1496,
                "end": 1498
              }
            },
            "loc": {
              "start": 1496,
              "end": 1499
            }
          },
          "directives": [],
          "loc": {
            "start": 1492,
            "end": 1499
          }
        }
      }
    ],
    "extensions": {},
    "astNode": {
      "kind": "FieldDefinition",
      "name": {
        "kind": "Name",
        "value": "markTweetRead",
        "loc": {
          "start": 1478,
          "end": 1491
        }
      },
      "arguments": [
        {
          "kind": "InputValueDefinition",
          "name": {
            "kind": "Name",
            "value": "id",
            "loc": {
              "start": 1492,
              "end": 1494
            }
          },
          "type": {
            "kind": "NonNullType",
            "type": {
              "kind": "NamedType",
              "name": {
                "kind": "Name",
                "value": "ID",
                "loc": {
                  "start": 1496,
                  "end": 1498
                }
              },
              "loc": {
                "start": 1496,
                "end": 1498
              }
            },
            "loc": {
              "start": 1496,
              "end": 1499
            }
          },
          "directives": [],
          "loc": {
            "start": 1492,
            "end": 1499
          }
        }
      ],
      "type": {
        "kind": "NamedType",
        "name": {
          "kind": "Name",
          "value": "Boolean",
          "loc": {
            "start": 1502,
            "end": 1509
          }
        },
        "loc": {
          "start": 1502,
          "end": 1509
        }
      },
      "directives": [],
      "loc": {
        "start": 1478,
        "end": 1509
      }
    }
  }
}"
`;

exports[`lib graphql getIntrospectionFieldsList() returns list of queries 1`] = `
"{
  "Tweet": {
    "name": "Tweet",
    "type": "Tweet",
    "args": [
      {
        "name": "id",
        "type": "ID!",
        "extensions": {},
        "astNode": {
          "kind": "InputValueDefinition",
          "name": {
            "kind": "Name",
            "value": "id",
            "loc": {
              "start": 1016,
              "end": 1018
            }
          },
          "type": {
            "kind": "NonNullType",
            "type": {
              "kind": "NamedType",
              "name": {
                "kind": "Name",
                "value": "ID",
                "loc": {
                  "start": 1020,
                  "end": 1022
                }
              },
              "loc": {
                "start": 1020,
                "end": 1022
              }
            },
            "loc": {
              "start": 1020,
              "end": 1023
            }
          },
          "directives": [],
          "loc": {
            "start": 1016,
            "end": 1023
          }
        }
      }
    ],
    "extensions": {},
    "astNode": {
      "kind": "FieldDefinition",
      "name": {
        "kind": "Name",
        "value": "Tweet",
        "loc": {
          "start": 1010,
          "end": 1015
        }
      },
      "arguments": [
        {
          "kind": "InputValueDefinition",
          "name": {
            "kind": "Name",
            "value": "id",
            "loc": {
              "start": 1016,
              "end": 1018
            }
          },
          "type": {
            "kind": "NonNullType",
            "type": {
              "kind": "NamedType",
              "name": {
                "kind": "Name",
                "value": "ID",
                "loc": {
                  "start": 1020,
                  "end": 1022
                }
              },
              "loc": {
                "start": 1020,
                "end": 1022
              }
            },
            "loc": {
              "start": 1020,
              "end": 1023
            }
          },
          "directives": [],
          "loc": {
            "start": 1016,
            "end": 1023
          }
        }
      ],
      "type": {
        "kind": "NamedType",
        "name": {
          "kind": "Name",
          "value": "Tweet",
          "loc": {
            "start": 1026,
            "end": 1031
          }
        },
        "loc": {
          "start": 1026,
          "end": 1031
        }
      },
      "directives": [],
      "loc": {
        "start": 1010,
        "end": 1031
      }
    }
  },
  "Tweets": {
    "name": "Tweets",
    "type": "[Tweet]!",
    "args": [
      {
        "name": "limit",
        "type": "Int",
        "defaultValue": 5,
        "extensions": {},
        "astNode": {
          "kind": "InputValueDefinition",
          "name": {
            "kind": "Name",
            "value": "limit",
            "loc": {
              "start": 1043,
              "end": 1048
            }
          },
          "type": {
            "kind": "NamedType",
            "name": {
              "kind": "Name",
              "value": "Int",
              "loc": {
                "start": 1050,
                "end": 1053
              }
            },
            "loc": {
              "start": 1050,
              "end": 1053
            }
          },
          "defaultValue": {
            "kind": "IntValue",
            "value": "5",
            "loc": {
              "start": 1056,
              "end": 1057
            }
          },
          "directives": [],
          "loc": {
            "start": 1043,
            "end": 1057
          }
        }
      },
      {
        "name": "skip",
        "type": "Int",
        "defaultValue": 0,
        "extensions": {},
        "astNode": {
          "kind": "InputValueDefinition",
          "name": {
            "kind": "Name",
            "value": "skip",
            "loc": {
              "start": 1059,
              "end": 1063
            }
          },
          "type": {
            "kind": "NamedType",
            "name": {
              "kind": "Name",
              "value": "Int",
              "loc": {
                "start": 1065,
                "end": 1068
              }
            },
            "loc": {
              "start": 1065,
              "end": 1068
            }
          },
          "defaultValue": {
            "kind": "IntValue",
            "value": "0",
            "loc": {
              "start": 1071,
              "end": 1072
            }
          },
          "directives": [],
          "loc": {
            "start": 1059,
            "end": 1072
          }
        }
      },
      {
        "name": "sort_field",
        "type": "String",
        "extensions": {},
        "astNode": {
          "kind": "InputValueDefinition",
          "name": {
            "kind": "Name",
            "value": "sort_field",
            "loc": {
              "start": 1074,
              "end": 1084
            }
          },
          "type": {
            "kind": "NamedType",
            "name": {
              "kind": "Name",
              "value": "String",
              "loc": {
                "start": 1086,
                "end": 1092
              }
            },
            "loc": {
              "start": 1086,
              "end": 1092
            }
          },
          "directives": [],
          "loc": {
            "start": 1074,
            "end": 1092
          }
        }
      },
      {
        "name": "sort_order",
        "type": "String",
        "defaultValue": "ASC",
        "extensions": {},
        "astNode": {
          "kind": "InputValueDefinition",
          "name": {
            "kind": "Name",
            "value": "sort_order",
            "loc": {
              "start": 1094,
              "end": 1104
            }
          },
          "type": {
            "kind": "NamedType",
            "name": {
              "kind": "Name",
              "value": "String",
              "loc": {
                "start": 1106,
                "end": 1112
              }
            },
            "loc": {
              "start": 1106,
              "end": 1112
            }
          },
          "defaultValue": {
            "kind": "StringValue",
            "value": "ASC",
            "block": false,
            "loc": {
              "start": 1115,
              "end": 1120
            }
          },
          "directives": [],
          "loc": {
            "start": 1094,
            "end": 1120
          }
        }
      }
    ],
    "extensions": {},
    "astNode": {
      "kind": "FieldDefinition",
      "name": {
        "kind": "Name",
        "value": "Tweets",
        "loc": {
          "start": 1036,
          "end": 1042
        }
      },
      "arguments": [
        {
          "kind": "InputValueDefinition",
          "name": {
            "kind": "Name",
            "value": "limit",
            "loc": {
              "start": 1043,
              "end": 1048
            }
          },
          "type": {
            "kind": "NamedType",
            "name": {
              "kind": "Name",
              "value": "Int",
              "loc": {
                "start": 1050,
                "end": 1053
              }
            },
            "loc": {
              "start": 1050,
              "end": 1053
            }
          },
          "defaultValue": {
            "kind": "IntValue",
            "value": "5",
            "loc": {
              "start": 1056,
              "end": 1057
            }
          },
          "directives": [],
          "loc": {
            "start": 1043,
            "end": 1057
          }
        },
        {
          "kind": "InputValueDefinition",
          "name": {
            "kind": "Name",
            "value": "skip",
            "loc": {
              "start": 1059,
              "end": 1063
            }
          },
          "type": {
            "kind": "NamedType",
            "name": {
              "kind": "Name",
              "value": "Int",
              "loc": {
                "start": 1065,
                "end": 1068
              }
            },
            "loc": {
              "start": 1065,
              "end": 1068
            }
          },
          "defaultValue": {
            "kind": "IntValue",
            "value": "0",
            "loc": {
              "start": 1071,
              "end": 1072
            }
          },
          "directives": [],
          "loc": {
            "start": 1059,
            "end": 1072
          }
        },
        {
          "kind": "InputValueDefinition",
          "name": {
            "kind": "Name",
            "value": "sort_field",
            "loc": {
              "start": 1074,
              "end": 1084
            }
          },
          "type": {
            "kind": "NamedType",
            "name": {
              "kind": "Name",
              "value": "String",
              "loc": {
                "start": 1086,
                "end": 1092
              }
            },
            "loc": {
              "start": 1086,
              "end": 1092
            }
          },
          "directives": [],
          "loc": {
            "start": 1074,
            "end": 1092
          }
        },
        {
          "kind": "InputValueDefinition",
          "name": {
            "kind": "Name",
            "value": "sort_order",
            "loc": {
              "start": 1094,
              "end": 1104
            }
          },
          "type": {
            "kind": "NamedType",
            "name": {
              "kind": "Name",
              "value": "String",
              "loc": {
                "start": 1106,
                "end": 1112
              }
            },
            "loc": {
              "start": 1106,
              "end": 1112
            }
          },
          "defaultValue": {
            "kind": "StringValue",
            "value": "ASC",
            "block": false,
            "loc": {
              "start": 1115,
              "end": 1120
            }
          },
          "directives": [],
          "loc": {
            "start": 1094,
            "end": 1120
          }
        }
      ],
      "type": {
        "kind": "NonNullType",
        "type": {
          "kind": "ListType",
          "type": {
            "kind": "NamedType",
            "name": {
              "kind": "Name",
              "value": "Tweet",
              "loc": {
                "start": 1124,
                "end": 1129
              }
            },
            "loc": {
              "start": 1124,
              "end": 1129
            }
          },
          "loc": {
            "start": 1123,
            "end": 1130
          }
        },
        "loc": {
          "start": 1123,
          "end": 1131
        }
      },
      "directives": [],
      "loc": {
        "start": 1036,
        "end": 1131
      }
    }
  },
  "TweetsMeta": {
    "name": "TweetsMeta",
    "type": "Meta",
    "args": [],
    "deprecationReason": "No longer supported",
    "extensions": {},
    "astNode": {
      "kind": "FieldDefinition",
      "name": {
        "kind": "Name",
        "value": "TweetsMeta",
        "loc": {
          "start": 1136,
          "end": 1146
        }
      },
      "arguments": [],
      "type": {
        "kind": "NamedType",
        "name": {
          "kind": "Name",
          "value": "Meta",
          "loc": {
            "start": 1148,
            "end": 1152
          }
        },
        "loc": {
          "start": 1148,
          "end": 1152
        }
      },
      "directives": [
        {
          "kind": "Directive",
          "name": {
            "kind": "Name",
            "value": "deprecated",
            "loc": {
              "start": 1154,
              "end": 1164
            }
          },
          "arguments": [],
          "loc": {
            "start": 1153,
            "end": 1164
          }
        }
      ],
      "loc": {
        "start": 1136,
        "end": 1164
      }
    }
  },
  "User": {
    "name": "User",
    "type": "User",
    "args": [
      {
        "name": "id",
        "type": "ID!",
        "extensions": {},
        "astNode": {
          "kind": "InputValueDefinition",
          "name": {
            "kind": "Name",
            "value": "id",
            "loc": {
              "start": 1174,
              "end": 1176
            }
          },
          "type": {
            "kind": "NonNullType",
            "type": {
              "kind": "NamedType",
              "name": {
                "kind": "Name",
                "value": "ID",
                "loc": {
                  "start": 1178,
                  "end": 1180
                }
              },
              "loc": {
                "start": 1178,
                "end": 1180
              }
            },
            "loc": {
              "start": 1178,
              "end": 1181
            }
          },
          "directives": [],
          "loc": {
            "start": 1174,
            "end": 1181
          }
        }
      }
    ],
    "deprecationReason": "Use \`Users\`.",
    "extensions": {},
    "astNode": {
      "kind": "FieldDefinition",
      "name": {
        "kind": "Name",
        "value": "User",
        "loc": {
          "start": 1169,
          "end": 1173
        }
      },
      "arguments": [
        {
          "kind": "InputValueDefinition",
          "name": {
            "kind": "Name",
            "value": "id",
            "loc": {
              "start": 1174,
              "end": 1176
            }
          },
          "type": {
            "kind": "NonNullType",
            "type": {
              "kind": "NamedType",
              "name": {
                "kind": "Name",
                "value": "ID",
                "loc": {
                  "start": 1178,
                  "end": 1180
                }
              },
              "loc": {
                "start": 1178,
                "end": 1180
              }
            },
            "loc": {
              "start": 1178,
              "end": 1181
            }
          },
          "directives": [],
          "loc": {
            "start": 1174,
            "end": 1181
          }
        }
      ],
      "type": {
        "kind": "NamedType",
        "name": {
          "kind": "Name",
          "value": "User",
          "loc": {
            "start": 1184,
            "end": 1188
          }
        },
        "loc": {
          "start": 1184,
          "end": 1188
        }
      },
      "directives": [
        {
          "kind": "Directive",
          "name": {
            "kind": "Name",
            "value": "deprecated",
            "loc": {
              "start": 1190,
              "end": 1200
            }
          },
          "arguments": [
            {
              "kind": "Argument",
              "name": {
                "kind": "Name",
                "value": "reason",
                "loc": {
                  "start": 1201,
                  "end": 1207
                }
              },
              "value": {
                "kind": "StringValue",
                "value": "Use \`Users\`.",
                "block": false,
                "loc": {
                  "start": 1209,
                  "end": 1223
                }
              },
              "loc": {
                "start": 1201,
                "end": 1223
              }
            }
          ],
          "loc": {
            "start": 1189,
            "end": 1224
          }
        }
      ],
      "loc": {
        "start": 1169,
        "end": 1224
      }
    }
  },
  "Users": {
    "name": "Users",
    "type": "[User]!",
    "args": [
      {
        "name": "id",
        "type": "[ID!]!",
        "extensions": {},
        "astNode": {
          "kind": "InputValueDefinition",
          "name": {
            "kind": "Name",
            "value": "id",
            "loc": {
              "start": 1235,
              "end": 1237
            }
          },
          "type": {
            "kind": "NonNullType",
            "type": {
              "kind": "ListType",
              "type": {
                "kind": "NonNullType",
                "type": {
                  "kind": "NamedType",
                  "name": {
                    "kind": "Name",
                    "value": "ID",
                    "loc": {
                      "start": 1240,
                      "end": 1242
                    }
                  },
                  "loc": {
                    "start": 1240,
                    "end": 1242
                  }
                },
                "loc": {
                  "start": 1240,
                  "end": 1243
                }
              },
              "loc": {
                "start": 1239,
                "end": 1244
              }
            },
            "loc": {
              "start": 1239,
              "end": 1245
            }
          },
          "directives": [],
          "loc": {
            "start": 1235,
            "end": 1245
          }
        }
      }
    ],
    "extensions": {},
    "astNode": {
      "kind": "FieldDefinition",
      "name": {
        "kind": "Name",
        "value": "Users",
        "loc": {
          "start": 1229,
          "end": 1234
        }
      },
      "arguments": [
        {
          "kind": "InputValueDefinition",
          "name": {
            "kind": "Name",
            "value": "id",
            "loc": {
              "start": 1235,
              "end": 1237
            }
          },
          "type": {
            "kind": "NonNullType",
            "type": {
              "kind": "ListType",
              "type": {
                "kind": "NonNullType",
                "type": {
                  "kind": "NamedType",
                  "name": {
                    "kind": "Name",
                    "value": "ID",
                    "loc": {
                      "start": 1240,
                      "end": 1242
                    }
                  },
                  "loc": {
                    "start": 1240,
                    "end": 1242
                  }
                },
                "loc": {
                  "start": 1240,
                  "end": 1243
                }
              },
              "loc": {
                "start": 1239,
                "end": 1244
              }
            },
            "loc": {
              "start": 1239,
              "end": 1245
            }
          },
          "directives": [],
          "loc": {
            "start": 1235,
            "end": 1245
          }
        }
      ],
      "type": {
        "kind": "NonNullType",
        "type": {
          "kind": "ListType",
          "type": {
            "kind": "NamedType",
            "name": {
              "kind": "Name",
              "value": "User",
              "loc": {
                "start": 1249,
                "end": 1253
              }
            },
            "loc": {
              "start": 1249,
              "end": 1253
            }
          },
          "loc": {
            "start": 1248,
            "end": 1254
          }
        },
        "loc": {
          "start": 1248,
          "end": 1255
        }
      },
      "directives": [],
      "loc": {
        "start": 1229,
        "end": 1255
      }
    }
  },
  "NotificationsMeta": {
    "name": "NotificationsMeta",
    "type": "Meta",
    "args": [],
    "deprecationReason": "No longer supported",
    "extensions": {},
    "astNode": {
      "kind": "FieldDefinition",
      "name": {
        "kind": "Name",
        "value": "NotificationsMeta",
        "loc": {
          "start": 1260,
          "end": 1277
        }
      },
      "arguments": [],
      "type": {
        "kind": "NamedType",
        "name": {
          "kind": "Name",
          "value": "Meta",
          "loc": {
            "start": 1279,
            "end": 1283
          }
        },
        "loc": {
          "start": 1279,
          "end": 1283
        }
      },
      "directives": [
        {
          "kind": "Directive",
          "name": {
            "kind": "Name",
            "value": "deprecated",
            "loc": {
              "start": 1285,
              "end": 1295
            }
          },
          "arguments": [],
          "loc": {
            "start": 1284,
            "end": 1295
          }
        }
      ],
      "loc": {
        "start": 1260,
        "end": 1295
      }
    }
  }
}"
`;

exports[`lib graphql getIntrospectionFieldsList() returns list of subscriptions 1`] = `
"{
  "Notifications": {
    "name": "Notifications",
    "type": "[Notification]!",
    "args": [
      {
        "name": "limit",
        "type": "Int",
        "extensions": {},
        "astNode": {
          "kind": "InputValueDefinition",
          "name": {
            "kind": "Name",
            "value": "limit",
            "loc": {
              "start": 1643,
              "end": 1648
            }
          },
          "type": {
            "kind": "NamedType",
            "name": {
              "kind": "Name",
              "value": "Int",
              "loc": {
                "start": 1650,
                "end": 1653
              }
            },
            "loc": {
              "start": 1650,
              "end": 1653
            }
          },
          "directives": [],
          "loc": {
            "start": 1643,
            "end": 1653
          }
        }
      }
    ],
    "extensions": {},
    "astNode": {
      "kind": "FieldDefinition",
      "name": {
        "kind": "Name",
        "value": "Notifications",
        "loc": {
          "start": 1629,
          "end": 1642
        }
      },
      "arguments": [
        {
          "kind": "InputValueDefinition",
          "name": {
            "kind": "Name",
            "value": "limit",
            "loc": {
              "start": 1643,
              "end": 1648
            }
          },
          "type": {
            "kind": "NamedType",
            "name": {
              "kind": "Name",
              "value": "Int",
              "loc": {
                "start": 1650,
                "end": 1653
              }
            },
            "loc": {
              "start": 1650,
              "end": 1653
            }
          },
          "directives": [],
          "loc": {
            "start": 1643,
            "end": 1653
          }
        }
      ],
      "type": {
        "kind": "NonNullType",
        "type": {
          "kind": "ListType",
          "type": {
            "kind": "NamedType",
            "name": {
              "kind": "Name",
              "value": "Notification",
              "loc": {
                "start": 1657,
                "end": 1669
              }
            },
            "loc": {
              "start": 1657,
              "end": 1669
            }
          },
          "loc": {
            "start": 1656,
            "end": 1670
          }
        },
        "loc": {
          "start": 1656,
          "end": 1671
        }
      },
      "directives": [],
      "loc": {
        "start": 1629,
        "end": 1671
      }
    }
  }
}"
`;

exports[`lib graphql getSchemaMap() returns schema types map 1`] = `
"{
  "queries": {
    "Tweet": {
      "name": "Tweet",
      "type": "Tweet",
      "args": [
        {
          "name": "id",
          "type": "ID!",
          "extensions": {},
          "astNode": {
            "kind": "InputValueDefinition",
            "name": {
              "kind": "Name",
              "value": "id",
              "loc": {
                "start": 1016,
                "end": 1018
              }
            },
            "type": {
              "kind": "NonNullType",
              "type": {
                "kind": "NamedType",
                "name": {
                  "kind": "Name",
                  "value": "ID",
                  "loc": {
                    "start": 1020,
                    "end": 1022
                  }
                },
                "loc": {
                  "start": 1020,
                  "end": 1022
                }
              },
              "loc": {
                "start": 1020,
                "end": 1023
              }
            },
            "directives": [],
            "loc": {
              "start": 1016,
              "end": 1023
            }
          }
        }
      ],
      "extensions": {},
      "astNode": {
        "kind": "FieldDefinition",
        "name": {
          "kind": "Name",
          "value": "Tweet",
          "loc": {
            "start": 1010,
            "end": 1015
          }
        },
        "arguments": [
          {
            "kind": "InputValueDefinition",
            "name": {
              "kind": "Name",
              "value": "id",
              "loc": {
                "start": 1016,
                "end": 1018
              }
            },
            "type": {
              "kind": "NonNullType",
              "type": {
                "kind": "NamedType",
                "name": {
                  "kind": "Name",
                  "value": "ID",
                  "loc": {
                    "start": 1020,
                    "end": 1022
                  }
                },
                "loc": {
                  "start": 1020,
                  "end": 1022
                }
              },
              "loc": {
                "start": 1020,
                "end": 1023
              }
            },
            "directives": [],
            "loc": {
              "start": 1016,
              "end": 1023
            }
          }
        ],
        "type": {
          "kind": "NamedType",
          "name": {
            "kind": "Name",
            "value": "Tweet",
            "loc": {
              "start": 1026,
              "end": 1031
            }
          },
          "loc": {
            "start": 1026,
            "end": 1031
          }
        },
        "directives": [],
        "loc": {
          "start": 1010,
          "end": 1031
        }
      }
    },
    "Tweets": {
      "name": "Tweets",
      "type": "[Tweet]!",
      "args": [
        {
          "name": "limit",
          "type": "Int",
          "defaultValue": 5,
          "extensions": {},
          "astNode": {
            "kind": "InputValueDefinition",
            "name": {
              "kind": "Name",
              "value": "limit",
              "loc": {
                "start": 1043,
                "end": 1048
              }
            },
            "type": {
              "kind": "NamedType",
              "name": {
                "kind": "Name",
                "value": "Int",
                "loc": {
                  "start": 1050,
                  "end": 1053
                }
              },
              "loc": {
                "start": 1050,
                "end": 1053
              }
            },
            "defaultValue": {
              "kind": "IntValue",
              "value": "5",
              "loc": {
                "start": 1056,
                "end": 1057
              }
            },
            "directives": [],
            "loc": {
              "start": 1043,
              "end": 1057
            }
          }
        },
        {
          "name": "skip",
          "type": "Int",
          "defaultValue": 0,
          "extensions": {},
          "astNode": {
            "kind": "InputValueDefinition",
            "name": {
              "kind": "Name",
              "value": "skip",
              "loc": {
                "start": 1059,
                "end": 1063
              }
            },
            "type": {
              "kind": "NamedType",
              "name": {
                "kind": "Name",
                "value": "Int",
                "loc": {
                  "start": 1065,
                  "end": 1068
                }
              },
              "loc": {
                "start": 1065,
                "end": 1068
              }
            },
            "defaultValue": {
              "kind": "IntValue",
              "value": "0",
              "loc": {
                "start": 1071,
                "end": 1072
              }
            },
            "directives": [],
            "loc": {
              "start": 1059,
              "end": 1072
            }
          }
        },
        {
          "name": "sort_field",
          "type": "String",
          "extensions": {},
          "astNode": {
            "kind": "InputValueDefinition",
            "name": {
              "kind": "Name",
              "value": "sort_field",
              "loc": {
                "start": 1074,
                "end": 1084
              }
            },
            "type": {
              "kind": "NamedType",
              "name": {
                "kind": "Name",
                "value": "String",
                "loc": {
                  "start": 1086,
                  "end": 1092
                }
              },
              "loc": {
                "start": 1086,
                "end": 1092
              }
            },
            "directives": [],
            "loc": {
              "start": 1074,
              "end": 1092
            }
          }
        },
        {
          "name": "sort_order",
          "type": "String",
          "defaultValue": "ASC",
          "extensions": {},
          "astNode": {
            "kind": "InputValueDefinition",
            "name": {
              "kind": "Name",
              "value": "sort_order",
              "loc": {
                "start": 1094,
                "end": 1104
              }
            },
            "type": {
              "kind": "NamedType",
              "name": {
                "kind": "Name",
                "value": "String",
                "loc": {
                  "start": 1106,
                  "end": 1112
                }
              },
              "loc": {
                "start": 1106,
                "end": 1112
              }
            },
            "defaultValue": {
              "kind": "StringValue",
              "value": "ASC",
              "block": false,
              "loc": {
                "start": 1115,
                "end": 1120
              }
            },
            "directives": [],
            "loc": {
              "start": 1094,
              "end": 1120
            }
          }
        }
      ],
      "extensions": {},
      "astNode": {
        "kind": "FieldDefinition",
        "name": {
          "kind": "Name",
          "value": "Tweets",
          "loc": {
            "start": 1036,
            "end": 1042
          }
        },
        "arguments": [
          {
            "kind": "InputValueDefinition",
            "name": {
              "kind": "Name",
              "value": "limit",
              "loc": {
                "start": 1043,
                "end": 1048
              }
            },
            "type": {
              "kind": "NamedType",
              "name": {
                "kind": "Name",
                "value": "Int",
                "loc": {
                  "start": 1050,
                  "end": 1053
                }
              },
              "loc": {
                "start": 1050,
                "end": 1053
              }
            },
            "defaultValue": {
              "kind": "IntValue",
              "value": "5",
              "loc": {
                "start": 1056,
                "end": 1057
              }
            },
            "directives": [],
            "loc": {
              "start": 1043,
              "end": 1057
            }
          },
          {
            "kind": "InputValueDefinition",
            "name": {
              "kind": "Name",
              "value": "skip",
              "loc": {
                "start": 1059,
                "end": 1063
              }
            },
            "type": {
              "kind": "NamedType",
              "name": {
                "kind": "Name",
                "value": "Int",
                "loc": {
                  "start": 1065,
                  "end": 1068
                }
              },
              "loc": {
                "start": 1065,
                "end": 1068
              }
            },
            "defaultValue": {
              "kind": "IntValue",
              "value": "0",
              "loc": {
                "start": 1071,
                "end": 1072
              }
            },
            "directives": [],
            "loc": {
              "start": 1059,
              "end": 1072
            }
          },
          {
            "kind": "InputValueDefinition",
            "name": {
              "kind": "Name",
              "value": "sort_field",
              "loc": {
                "start": 1074,
                "end": 1084
              }
            },
            "type": {
              "kind": "NamedType",
              "name": {
                "kind": "Name",
                "value": "String",
                "loc": {
                  "start": 1086,
                  "end": 1092
                }
              },
              "loc": {
                "start": 1086,
                "end": 1092
              }
            },
            "directives": [],
            "loc": {
              "start": 1074,
              "end": 1092
            }
          },
          {
            "kind": "InputValueDefinition",
            "name": {
              "kind": "Name",
              "value": "sort_order",
              "loc": {
                "start": 1094,
                "end": 1104
              }
            },
            "type": {
              "kind": "NamedType",
              "name": {
                "kind": "Name",
                "value": "String",
                "loc": {
                  "start": 1106,
                  "end": 1112
                }
              },
              "loc": {
                "start": 1106,
                "end": 1112
              }
            },
            "defaultValue": {
              "kind": "StringValue",
              "value": "ASC",
              "block": false,
              "loc": {
                "start": 1115,
                "end": 1120
              }
            },
            "directives": [],
            "loc": {
              "start": 1094,
              "end": 1120
            }
          }
        ],
        "type": {
          "kind": "NonNullType",
          "type": {
            "kind": "ListType",
            "type": {
              "kind": "NamedType",
              "name": {
                "kind": "Name",
                "value": "Tweet",
                "loc": {
                  "start": 1124,
                  "end": 1129
                }
              },
              "loc": {
                "start": 1124,
                "end": 1129
              }
            },
            "loc": {
              "start": 1123,
              "end": 1130
            }
          },
          "loc": {
            "start": 1123,
            "end": 1131
          }
        },
        "directives": [],
        "loc": {
          "start": 1036,
          "end": 1131
        }
      }
    },
    "TweetsMeta": {
      "name": "TweetsMeta",
      "type": "Meta",
      "args": [],
      "deprecationReason": "No longer supported",
      "extensions": {},
      "astNode": {
        "kind": "FieldDefinition",
        "name": {
          "kind": "Name",
          "value": "TweetsMeta",
          "loc": {
            "start": 1136,
            "end": 1146
          }
        },
        "arguments": [],
        "type": {
          "kind": "NamedType",
          "name": {
            "kind": "Name",
            "value": "Meta",
            "loc": {
              "start": 1148,
              "end": 1152
            }
          },
          "loc": {
            "start": 1148,
            "end": 1152
          }
        },
        "directives": [
          {
            "kind": "Directive",
            "name": {
              "kind": "Name",
              "value": "deprecated",
              "loc": {
                "start": 1154,
                "end": 1164
              }
            },
            "arguments": [],
            "loc": {
              "start": 1153,
              "end": 1164
            }
          }
        ],
        "loc": {
          "start": 1136,
          "end": 1164
        }
      }
    },
    "User": {
      "name": "User",
      "type": "User",
      "args": [
        {
          "name": "id",
          "type": "ID!",
          "extensions": {},
          "astNode": {
            "kind": "InputValueDefinition",
            "name": {
              "kind": "Name",
              "value": "id",
              "loc": {
                "start": 1174,
                "end": 1176
              }
            },
            "type": {
              "kind": "NonNullType",
              "type": {
                "kind": "NamedType",
                "name": {
                  "kind": "Name",
                  "value": "ID",
                  "loc": {
                    "start": 1178,
                    "end": 1180
                  }
                },
                "loc": {
                  "start": 1178,
                  "end": 1180
                }
              },
              "loc": {
                "start": 1178,
                "end": 1181
              }
            },
            "directives": [],
            "loc": {
              "start": 1174,
              "end": 1181
            }
          }
        }
      ],
      "deprecationReason": "Use \`Users\`.",
      "extensions": {},
      "astNode": {
        "kind": "FieldDefinition",
        "name": {
          "kind": "Name",
          "value": "User",
          "loc": {
            "start": 1169,
            "end": 1173
          }
        },
        "arguments": [
          {
            "kind": "InputValueDefinition",
            "name": {
              "kind": "Name",
              "value": "id",
              "loc": {
                "start": 1174,
                "end": 1176
              }
            },
            "type": {
              "kind": "NonNullType",
              "type": {
                "kind": "NamedType",
                "name": {
                  "kind": "Name",
                  "value": "ID",
                  "loc": {
                    "start": 1178,
                    "end": 1180
                  }
                },
                "loc": {
                  "start": 1178,
                  "end": 1180
                }
              },
              "loc": {
                "start": 1178,
                "end": 1181
              }
            },
            "directives": [],
            "loc": {
              "start": 1174,
              "end": 1181
            }
          }
        ],
        "type": {
          "kind": "NamedType",
          "name": {
            "kind": "Name",
            "value": "User",
            "loc": {
              "start": 1184,
              "end": 1188
            }
          },
          "loc": {
            "start": 1184,
            "end": 1188
          }
        },
        "directives": [
          {
            "kind": "Directive",
            "name": {
              "kind": "Name",
              "value": "deprecated",
              "loc": {
                "start": 1190,
                "end": 1200
              }
            },
            "arguments": [
              {
                "kind": "Argument",
                "name": {
                  "kind": "Name",
                  "value": "reason",
                  "loc": {
                    "start": 1201,
                    "end": 1207
                  }
                },
                "value": {
                  "kind": "StringValue",
                  "value": "Use \`Users\`.",
                  "block": false,
                  "loc": {
                    "start": 1209,
                    "end": 1223
                  }
                },
                "loc": {
                  "start": 1201,
                  "end": 1223
                }
              }
            ],
            "loc": {
              "start": 1189,
              "end": 1224
            }
          }
        ],
        "loc": {
          "start": 1169,
          "end": 1224
        }
      }
    },
    "Users": {
      "name": "Users",
      "type": "[User]!",
      "args": [
        {
          "name": "id",
          "type": "[ID!]!",
          "extensions": {},
          "astNode": {
            "kind": "InputValueDefinition",
            "name": {
              "kind": "Name",
              "value": "id",
              "loc": {
                "start": 1235,
                "end": 1237
              }
            },
            "type": {
              "kind": "NonNullType",
              "type": {
                "kind": "ListType",
                "type": {
                  "kind": "NonNullType",
                  "type": {
                    "kind": "NamedType",
                    "name": {
                      "kind": "Name",
                      "value": "ID",
                      "loc": {
                        "start": 1240,
                        "end": 1242
                      }
                    },
                    "loc": {
                      "start": 1240,
                      "end": 1242
                    }
                  },
                  "loc": {
                    "start": 1240,
                    "end": 1243
                  }
                },
                "loc": {
                  "start": 1239,
                  "end": 1244
                }
              },
              "loc": {
                "start": 1239,
                "end": 1245
              }
            },
            "directives": [],
            "loc": {
              "start": 1235,
              "end": 1245
            }
          }
        }
      ],
      "extensions": {},
      "astNode": {
        "kind": "FieldDefinition",
        "name": {
          "kind": "Name",
          "value": "Users",
          "loc": {
            "start": 1229,
            "end": 1234
          }
        },
        "arguments": [
          {
            "kind": "InputValueDefinition",
            "name": {
              "kind": "Name",
              "value": "id",
              "loc": {
                "start": 1235,
                "end": 1237
              }
            },
            "type": {
              "kind": "NonNullType",
              "type": {
                "kind": "ListType",
                "type": {
                  "kind": "NonNullType",
                  "type": {
                    "kind": "NamedType",
                    "name": {
                      "kind": "Name",
                      "value": "ID",
                      "loc": {
                        "start": 1240,
                        "end": 1242
                      }
                    },
                    "loc": {
                      "start": 1240,
                      "end": 1242
                    }
                  },
                  "loc": {
                    "start": 1240,
                    "end": 1243
                  }
                },
                "loc": {
                  "start": 1239,
                  "end": 1244
                }
              },
              "loc": {
                "start": 1239,
                "end": 1245
              }
            },
            "directives": [],
            "loc": {
              "start": 1235,
              "end": 1245
            }
          }
        ],
        "type": {
          "kind": "NonNullType",
          "type": {
            "kind": "ListType",
            "type": {
              "kind": "NamedType",
              "name": {
                "kind": "Name",
                "value": "User",
                "loc": {
                  "start": 1249,
                  "end": 1253
                }
              },
              "loc": {
                "start": 1249,
                "end": 1253
              }
            },
            "loc": {
              "start": 1248,
              "end": 1254
            }
          },
          "loc": {
            "start": 1248,
            "end": 1255
          }
        },
        "directives": [],
        "loc": {
          "start": 1229,
          "end": 1255
        }
      }
    },
    "NotificationsMeta": {
      "name": "NotificationsMeta",
      "type": "Meta",
      "args": [],
      "deprecationReason": "No longer supported",
      "extensions": {},
      "astNode": {
        "kind": "FieldDefinition",
        "name": {
          "kind": "Name",
          "value": "NotificationsMeta",
          "loc": {
            "start": 1260,
            "end": 1277
          }
        },
        "arguments": [],
        "type": {
          "kind": "NamedType",
          "name": {
            "kind": "Name",
            "value": "Meta",
            "loc": {
              "start": 1279,
              "end": 1283
            }
          },
          "loc": {
            "start": 1279,
            "end": 1283
          }
        },
        "directives": [
          {
            "kind": "Directive",
            "name": {
              "kind": "Name",
              "value": "deprecated",
              "loc": {
                "start": 1285,
                "end": 1295
              }
            },
            "arguments": [],
            "loc": {
              "start": 1284,
              "end": 1295
            }
          }
        ],
        "loc": {
          "start": 1260,
          "end": 1295
        }
      }
    }
  },
  "mutations": {
    "createTweet": {
      "name": "createTweet",
      "type": "Tweet",
      "args": [
        {
          "name": "input",
          "type": "TweetContent",
          "deprecationReason": "Use \`content\`.",
          "extensions": {},
          "astNode": {
            "kind": "InputValueDefinition",
            "name": {
              "kind": "Name",
              "value": "input",
              "loc": {
                "start": 1341,
                "end": 1346
              }
            },
            "type": {
              "kind": "NamedType",
              "name": {
                "kind": "Name",
                "value": "TweetContent",
                "loc": {
                  "start": 1348,
                  "end": 1360
                }
              },
              "loc": {
                "start": 1348,
                "end": 1360
              }
            },
            "directives": [
              {
                "kind": "Directive",
                "name": {
                  "kind": "Name",
                  "value": "deprecated",
                  "loc": {
                    "start": 1362,
                    "end": 1372
                  }
                },
                "arguments": [
                  {
                    "kind": "Argument",
                    "name": {
                      "kind": "Name",
                      "value": "reason",
                      "loc": {
                        "start": 1373,
                        "end": 1379
                      }
                    },
                    "value": {
                      "kind": "StringValue",
                      "value": "Use \`content\`.",
                      "block": false,
                      "loc": {
                        "start": 1381,
                        "end": 1397
                      }
                    },
                    "loc": {
                      "start": 1373,
                      "end": 1397
                    }
                  }
                ],
                "loc": {
                  "start": 1361,
                  "end": 1398
                }
              }
            ],
            "loc": {
              "start": 1341,
              "end": 1398
            }
          }
        },
        {
          "name": "content",
          "type": "TweetContent",
          "extensions": {},
          "astNode": {
            "kind": "InputValueDefinition",
            "name": {
              "kind": "Name",
              "value": "content",
              "loc": {
                "start": 1407,
                "end": 1414
              }
            },
            "type": {
              "kind": "NamedType",
              "name": {
                "kind": "Name",
                "value": "TweetContent",
                "loc": {
                  "start": 1416,
                  "end": 1428
                }
              },
              "loc": {
                "start": 1416,
                "end": 1428
              }
            },
            "directives": [],
            "loc": {
              "start": 1407,
              "end": 1428
            }
          }
        }
      ],
      "extensions": {},
      "astNode": {
        "kind": "FieldDefinition",
        "name": {
          "kind": "Name",
          "value": "createTweet",
          "loc": {
            "start": 1319,
            "end": 1330
          }
        },
        "arguments": [
          {
            "kind": "InputValueDefinition",
            "name": {
              "kind": "Name",
              "value": "input",
              "loc": {
                "start": 1341,
                "end": 1346
              }
            },
            "type": {
              "kind": "NamedType",
              "name": {
                "kind": "Name",
                "value": "TweetContent",
                "loc": {
                  "start": 1348,
                  "end": 1360
                }
              },
              "loc": {
                "start": 1348,
                "end": 1360
              }
            },
            "directives": [
              {
                "kind": "Directive",
                "name": {
                  "kind": "Name",
                  "value": "deprecated",
                  "loc": {
                    "start": 1362,
                    "end": 1372
                  }
                },
                "arguments": [
                  {
                    "kind": "Argument",
                    "name": {
                      "kind": "Name",
                      "value": "reason",
                      "loc": {
                        "start": 1373,
                        "end": 1379
                      }
                    },
                    "value": {
                      "kind": "StringValue",
                      "value": "Use \`content\`.",
                      "block": false,
                      "loc": {
                        "start": 1381,
                        "end": 1397
                      }
                    },
                    "loc": {
                      "start": 1373,
                      "end": 1397
                    }
                  }
                ],
                "loc": {
                  "start": 1361,
                  "end": 1398
                }
              }
            ],
            "loc": {
              "start": 1341,
              "end": 1398
            }
          },
          {
            "kind": "InputValueDefinition",
            "name": {
              "kind": "Name",
              "value": "content",
              "loc": {
                "start": 1407,
                "end": 1414
              }
            },
            "type": {
              "kind": "NamedType",
              "name": {
                "kind": "Name",
                "value": "TweetContent",
                "loc": {
                  "start": 1416,
                  "end": 1428
                }
              },
              "loc": {
                "start": 1416,
                "end": 1428
              }
            },
            "directives": [],
            "loc": {
              "start": 1407,
              "end": 1428
            }
          }
        ],
        "type": {
          "kind": "NamedType",
          "name": {
            "kind": "Name",
            "value": "Tweet",
            "loc": {
              "start": 1436,
              "end": 1441
            }
          },
          "loc": {
            "start": 1436,
            "end": 1441
          }
        },
        "directives": [],
        "loc": {
          "start": 1319,
          "end": 1441
        }
      }
    },
    "deleteTweet": {
      "name": "deleteTweet",
      "type": "Tweet",
      "args": [
        {
          "name": "id",
          "type": "ID!",
          "extensions": {},
          "astNode": {
            "kind": "InputValueDefinition",
            "name": {
              "kind": "Name",
              "value": "id",
              "loc": {
                "start": 1458,
                "end": 1460
              }
            },
            "type": {
              "kind": "NonNullType",
              "type": {
                "kind": "NamedType",
                "name": {
                  "kind": "Name",
                  "value": "ID",
                  "loc": {
                    "start": 1462,
                    "end": 1464
                  }
                },
                "loc": {
                  "start": 1462,
                  "end": 1464
                }
              },
              "loc": {
                "start": 1462,
                "end": 1465
              }
            },
            "directives": [],
            "loc": {
              "start": 1458,
              "end": 1465
            }
          }
        }
      ],
      "extensions": {},
      "astNode": {
        "kind": "FieldDefinition",
        "name": {
          "kind": "Name",
          "value": "deleteTweet",
          "loc": {
            "start": 1446,
            "end": 1457
          }
        },
        "arguments": [
          {
            "kind": "InputValueDefinition",
            "name": {
              "kind": "Name",
              "value": "id",
              "loc": {
                "start": 1458,
                "end": 1460
              }
            },
            "type": {
              "kind": "NonNullType",
              "type": {
                "kind": "NamedType",
                "name": {
                  "kind": "Name",
                  "value": "ID",
                  "loc": {
                    "start": 1462,
                    "end": 1464
                  }
                },
                "loc": {
                  "start": 1462,
                  "end": 1464
                }
              },
              "loc": {
                "start": 1462,
                "end": 1465
              }
            },
            "directives": [],
            "loc": {
              "start": 1458,
              "end": 1465
            }
          }
        ],
        "type": {
          "kind": "NamedType",
          "name": {
            "kind": "Name",
            "value": "Tweet",
            "loc": {
              "start": 1468,
              "end": 1473
            }
          },
          "loc": {
            "start": 1468,
            "end": 1473
          }
        },
        "directives": [],
        "loc": {
          "start": 1446,
          "end": 1473
        }
      }
    },
    "markTweetRead": {
      "name": "markTweetRead",
      "type": "Boolean",
      "args": [
        {
          "name": "id",
          "type": "ID!",
          "extensions": {},
          "astNode": {
            "kind": "InputValueDefinition",
            "name": {
              "kind": "Name",
              "value": "id",
              "loc": {
                "start": 1492,
                "end": 1494
              }
            },
            "type": {
              "kind": "NonNullType",
              "type": {
                "kind": "NamedType",
                "name": {
                  "kind": "Name",
                  "value": "ID",
                  "loc": {
                    "start": 1496,
                    "end": 1498
                  }
                },
                "loc": {
                  "start": 1496,
                  "end": 1498
                }
              },
              "loc": {
                "start": 1496,
                "end": 1499
              }
            },
            "directives": [],
            "loc": {
              "start": 1492,
              "end": 1499
            }
          }
        }
      ],
      "extensions": {},
      "astNode": {
        "kind": "FieldDefinition",
        "name": {
          "kind": "Name",
          "value": "markTweetRead",
          "loc": {
            "start": 1478,
            "end": 1491
          }
        },
        "arguments": [
          {
            "kind": "InputValueDefinition",
            "name": {
              "kind": "Name",
              "value": "id",
              "loc": {
                "start": 1492,
                "end": 1494
              }
            },
            "type": {
              "kind": "NonNullType",
              "type": {
                "kind": "NamedType",
                "name": {
                  "kind": "Name",
                  "value": "ID",
                  "loc": {
                    "start": 1496,
                    "end": 1498
                  }
                },
                "loc": {
                  "start": 1496,
                  "end": 1498
                }
              },
              "loc": {
                "start": 1496,
                "end": 1499
              }
            },
            "directives": [],
            "loc": {
              "start": 1492,
              "end": 1499
            }
          }
        ],
        "type": {
          "kind": "NamedType",
          "name": {
            "kind": "Name",
            "value": "Boolean",
            "loc": {
              "start": 1502,
              "end": 1509
            }
          },
          "loc": {
            "start": 1502,
            "end": 1509
          }
        },
        "directives": [],
        "loc": {
          "start": 1478,
          "end": 1509
        }
      }
    }
  },
  "subscriptions": {
    "Notifications": {
      "name": "Notifications",
      "type": "[Notification]!",
      "args": [
        {
          "name": "limit",
          "type": "Int",
          "extensions": {},
          "astNode": {
            "kind": "InputValueDefinition",
            "name": {
              "kind": "Name",
              "value": "limit",
              "loc": {
                "start": 1643,
                "end": 1648
              }
            },
            "type": {
              "kind": "NamedType",
              "name": {
                "kind": "Name",
                "value": "Int",
                "loc": {
                  "start": 1650,
                  "end": 1653
                }
              },
              "loc": {
                "start": 1650,
                "end": 1653
              }
            },
            "directives": [],
            "loc": {
              "start": 1643,
              "end": 1653
            }
          }
        }
      ],
      "extensions": {},
      "astNode": {
        "kind": "FieldDefinition",
        "name": {
          "kind": "Name",
          "value": "Notifications",
          "loc": {
            "start": 1629,
            "end": 1642
          }
        },
        "arguments": [
          {
            "kind": "InputValueDefinition",
            "name": {
              "kind": "Name",
              "value": "limit",
              "loc": {
                "start": 1643,
                "end": 1648
              }
            },
            "type": {
              "kind": "NamedType",
              "name": {
                "kind": "Name",
                "value": "Int",
                "loc": {
                  "start": 1650,
                  "end": 1653
                }
              },
              "loc": {
                "start": 1650,
                "end": 1653
              }
            },
            "directives": [],
            "loc": {
              "start": 1643,
              "end": 1653
            }
          }
        ],
        "type": {
          "kind": "NonNullType",
          "type": {
            "kind": "ListType",
            "type": {
              "kind": "NamedType",
              "name": {
                "kind": "Name",
                "value": "Notification",
                "loc": {
                  "start": 1657,
                  "end": 1669
                }
              },
              "loc": {
                "start": 1657,
                "end": 1669
              }
            },
            "loc": {
              "start": 1656,
              "end": 1670
            }
          },
          "loc": {
            "start": 1656,
            "end": 1671
          }
        },
        "directives": [],
        "loc": {
          "start": 1629,
          "end": 1671
        }
      }
    }
  },
  "directives": [
    "@include",
    "@skip",
    "@deprecated",
    "@specifiedBy"
  ],
  "objects": {
    "Media": "Media",
    "Tweet": "Tweet",
    "User": "User",
    "Stat": "Stat",
    "Notification": "Notification",
    "Meta": "Meta"
  },
  "unions": {},
  "interfaces": {
    "Node": "Node"
  },
  "enums": {
    "MediaType": "MediaType"
  },
  "inputs": {
    "TweetContent": "TweetContent"
  },
  "scalars": {
    "SRI": "SRI",
    "ID": "ID",
    "String": "String",
    "Int": "Int",
    "Url": "Url",
    "Date": "Date",
    "Boolean": "Boolean"
  }
}"
`;

exports[`lib graphql getTypeFromSchema() returns a filter map filtered by GraphQLEnumType 1`] = `
"{
  "MediaType": "MediaType"
}"
`;

exports[`lib graphql getTypeFromSchema() returns a filter map filtered by GraphQLInputObjectType 1`] = `
"{
  "TweetContent": "TweetContent"
}"
`;

exports[`lib graphql getTypeFromSchema() returns a filter map filtered by GraphQLInterfaceType 1`] = `
"{
  "Node": "Node"
}"
`;

exports[`lib graphql getTypeFromSchema() returns a filter map filtered by GraphQLObjectType 1`] = `
"{
  "Media": "Media",
  "Tweet": "Tweet",
  "User": "User",
  "Stat": "Stat",
  "Notification": "Notification",
  "Meta": "Meta"
}"
`;

exports[`lib graphql getTypeFromSchema() returns a filter map filtered by GraphQLScalarType 1`] = `
"{
  "SRI": "SRI",
  "ID": "ID",
  "String": "String",
  "Int": "Int",
  "Url": "Url",
  "Date": "Date",
  "Boolean": "Boolean"
}"
`;

exports[`lib graphql getTypeFromSchema() returns a filter map filtered by GraphQLUnionType 1`] = `"{}"`;
